# better-auth-mcp

./: .env.example  .gitignore  README.md  chatbot.py  feature_store.py  main.py  mcp-server.py  pyproject.toml  scraper.py  test_endpoint.py  test_feature_store.py
chat-app/: package.json  pnpm-lock.yaml
chat-app/app/(chat)/api/chat/: route.ts
chat-app/components/: greeting.tsx  multimodal-input.tsx  suggested-actions.tsx
mcp-server/: pyproject.toml
