[project]
name = "better-auth-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "fastmcp>=2.14.2",
    "google-genai>=1.56.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "modal>=1.3.0.post1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
]
